<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.felix.uas_fashionstore.ui.mainmenu.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_detail_product"
        android:name="com.felix.uas_fashionstore.ui.mainmenu.ProductDetailFragment"
        tools:layout="@layout/fragment_detail_product" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.felix.uas_fashionstore.ui.mainmenu.keranjang.KeranjangFragment"
        android:label="@string/title_keranjang"
        tools:layout="@layout/fragment_keranjang" />

    <fragment
        android:id="@+id/navigation_beli"
        android:name="com.felix.uas_fashionstore.ui.mainmenu.keranjang.BeliFragment"
        android:label="@string/title_beli"
        tools:layout="@layout/fragment_beli" />

    <fragment
        android:id="@+id/navigation_add_item"
        android:name="com.felix.uas_fashionstore.ui.mainmenu.addItem.AddItemFragment"
        android:label="@string/title_add_item"
        tools:layout="@layout/fragment_add_item" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.felix.uas_fashionstore.ui.mainmenu.wishlist.WishlistFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.felix.uas_fashionstore.ui.mainmenu.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />
</navigation>