<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.mainmenu.addItem.AddItemFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_item__text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="Ingin tambah apa?"
                android:textSize="@dimen/title_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/categoryPickText"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Category: "
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/categorySpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/categoryPickText"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/productNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_vertical_margin"
                    android:ems="10"
                    android:hint="@string/product_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_vertical_margin"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/priceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_vertical_margin"
                    android:ems="10"
                    android:hint="@string/product_price"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/titleStok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="Stok barang"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ukuranTerkecilTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="S: " />

                    <EditText
                        android:id="@+id/ukuranTerkecilInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ukuranTengahTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="M: " />

                    <EditText
                        android:id="@+id/ukuranTengahInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ukuranTertinggiTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="L: " />

                    <EditText
                        android:id="@+id/ukuranTerbesarInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="Add" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>